--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -80,7 +80,7 @@
   "are_you_sure_about_the_content_of_this_report?": "Are you sure about the content of this report?",
   "let's_find_people_same_with_your_vibe...": "Let's find people same with your vibe...",
   "join_now": "Join now",
-  "no_thanks": "NO THANKS",
+  "no_thanks": "No Thank",
   "upgrade_to_gold_to_see_people_who_are_interested_in_you": "Upgrade to Gold to see people who are interested in you",
   "no_one_likes_you_yet._done't_worry,_make_sure_you_complete_your_profile_to_other_find_you_faster": "No one likes you yet. Done't worry, make sure you complete your profile to other find you faster",
   "see_who_likes_you": "See who likes you",
