--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -18,11 +18,11 @@
   "continue": "Tiếp tục",
   "my_code_is": "Mã của tôi là",
   "please_enter_code_sent_to": "Vui lòng nhập mã được gửi đến",
-  "resend_code": "Mã gửi lại",
+  "resend_code": "Gửi lại mã",
   "invalid_code._please_try_again": "Mã không hợp lệ. Vui lòng thử lại",
   "what's_your_email?": "Email của bạn là gì?",
   "don't_lose_access_to_your_account,_verify_your_email": "Đừng mất quyền truy cập vào tài khoản của bạn, xác minh email của bạn",
-  "verify_instantly_by_connecting_xyour_google_account": "Xác minh ngay lập tức bằng cách kết nối tài khoản Google của bạn",
+  "verify_instantly_by_connecting_your_google_account": "Xác minh ngay lập tức bằng cách kết nối tài khoản Google của bạn",
   "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Tôi muốn nhận tin tức, cập nhật và cung cấp từ HeartLink",
   "enter_email": "Nhập email",
   "welcome_to_heartLink": "Chào mừng bạn đến với Heartlink",
@@ -80,7 +80,7 @@
   "are_you_sure_about_the_content_of_this_report?": "Bạn có chắc chắn về nội dung của báo cáo này?",
   "let's_find_people_same_with_your_vibe...": "Hãy tìm mọi người giống với sự rung cảm của bạn ...",
   "join_now": "Tham gia ngay",
-  "no_thanks": "KHÔNG, CÁM ƠN",
+  "no_thanks": "Không, Cảm ơn",
   "upgrade_to_gold_to_see_people_who_are_interested_in_you": "Nâng cấp lên vàng để xem những người quan tâm đến bạn",
   "no_one_likes_you_yet._done't_worry,_make_sure_you_complete_your_profile_to_other_find_you_faster": "Chưa ai thích bạn. Đừng lo lắng, hãy chắc chắn rằng bạn hoàn thành hồ sơ của mình để tìm bạn nhanh hơn",
   "see_who_likes_you": "Xem ai thích bạn",
@@ -317,7 +317,7 @@
   "please_provide_more_details_about_what_you_are_reporting": "Vui lòng cung cấp thêm chi tiết về những gì bạn đang báo cáo",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Nếu bạn thoát, bạn sẽ phải đăng ký lại tài khoản của mình và xóa tất cả thông tin.",
   "invalid_date_of_birth": "Ngày sinh không hợp lệ",
-  "save": "Cứu",
+  "save": "Lưu",
   "find_someone_that_also_looking_for_love_as_you": "Tìm một người cũng đang tìm kiếm tình yêu như bạn",
   "are_you_sure_you_want_to_sign_out?": "bạn có chắc chắn muốn đăng xuất không?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Người dùng tương thích sẽ tiếp tục gặp bạn ở vị trí được xác định cuối cùng.",
