--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -324,7 +324,7 @@
   "delete_my_account": "Xóa tài khoản của tôi đi",
   "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "Nếu bạn muốn giữ tài khoản nhưng không hiển thị cho người khác, bạn có thể chọn ẩn tài khoản. Bạn có thể vô hiệu hóa tính năng này trong cài đặt.",
   "please_verify": "Xin vui lòng xác minh",
-  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "Giúp chúng tôi bảo vệ cộng đồng Tinder bằng cách chứng minh bạn đang sử dụng ảnh gốc. Bạn chỉ cần ghi lại một video selfie. Nếu video selfie của bạn phù hợp với ảnh hồ sơ của bạn, bạn sẽ được xác minh!",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "Giúp chúng tôi bảo vệ cộng đồng Dating bằng cách chứng minh bạn đang sử dụng ảnh gốc. Bạn chỉ cần ghi lại một video selfie. Nếu video selfie của bạn phù hợp với ảnh hồ sơ của bạn, bạn sẽ được xác minh!",
   "maybe_later": "Có lẽ đi sau",
   "how_it_works": "Làm thế nào nó hoạt động",
   "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Công nghệ nhận dạng khuôn mặt của chúng tôi so sánh khuôn mặt của bạn trong video selfie với ảnh trong hồ sơ của bạn. Chúng tôi sẽ giữ hai ảnh chụp màn hình từ video selfie của bạn miễn là tài khoản của bạn được trực tiếp để kiểm tra và quản lý tính năng xác minh ảnh của bạn. Chúng tôi cũng sẽ giữ kết quả của quá trình (ví dụ: ảnh được xác minh hoặc không).",
@@ -343,5 +343,6 @@
   "we_cannot_record_your_video._please_try_again.": "Chúng tôi không thể ghi lại video của bạn. Vui lòng thử lại.",
   "increase_screen_brightness": "Tăng độ sáng màn hình",
   "photo_verified": "Ảnh xác minh",
-  "please_choose_a_reason": "Vui lòng chọn một lý do"
+  "please_choose_a_reason": "Vui lòng chọn một lý do",
+  "add_interests": "Thêm sở thích"
 }
