--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -324,7 +324,7 @@
   "delete_my_account": "احذف حسابي",
   "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "إذا كنت ترغب في الاحتفاظ بالحساب ولكن غير مرئي للآخرين ، فيمكنك اختيار إخفاء الحساب. يمكنك تعطيل هذه الميزة في الإعدادات.",
   "please_verify": "ارجوك تحقق",
-  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "ساعدنا في حماية مجتمع Tinder من خلال إثبات أنك تستخدم صورة أصلية. تحتاج فقط إلى تسجيل فيديو صورة شخصية. إذا كان مقطع الفيديو الخاص بك يتطابق مع صورة ملفك الشخصي ، فسوف يتم التحقق منه!",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "ساعدنا في حماية مجتمع Dating من خلال إثبات أنك تستخدم صورة أصلية. تحتاج فقط إلى تسجيل فيديو صورة شخصية. إذا كان مقطع الفيديو الخاص بك يتطابق مع صورة ملفك الشخصي ، فسوف يتم التحقق منه!",
   "maybe_later": "ربما في وقت لاحق",
   "how_it_works": "كيف تعمل",
   "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "تقارن تقنية التعرف على وجهنا وجهك في مقاطع الفيديو الخاصة بك مع صور في ملفك الشخصي. سنحتفظ بسباقين من مقطع الفيديو الخاص بك ، طالما أن حسابك مباشر لاختبار وإدارة ميزة التحقق من الصور الخاصة بك. سنحتفظ أيضًا بنتائج العملية (على سبيل المثال ، تم التحقق من الصورة أم لا).",
