--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -324,7 +324,7 @@
   "delete_my_account": "ลบบัญชีของฉัน",
   "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "หากคุณต้องการเก็บบัญชีไว้ แต่ไม่สามารถมองเห็นได้สำหรับผู้อื่นคุณสามารถเลือกที่จะซ่อนบัญชี คุณสามารถปิดการใช้งานคุณสมบัตินี้ในการตั้งค่า",
   "please_verify": "กรุณายืนยัน",
-  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "ช่วยเราปกป้องชุมชน Tinder โดยพิสูจน์ว่าคุณใช้ภาพถ่ายต้นฉบับ คุณเพียงแค่ต้องบันทึกวิดีโอเซลฟี่ หากวิดีโอเซลฟี่ของคุณตรงกับรูปโปรไฟล์ของคุณคุณจะได้รับการยืนยัน!",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "ช่วยเราปกป้องชุมชน Dating โดยพิสูจน์ว่าคุณใช้ภาพถ่ายต้นฉบับ คุณเพียงแค่ต้องบันทึกวิดีโอเซลฟี่ หากวิดีโอเซลฟี่ของคุณตรงกับรูปโปรไฟล์ของคุณคุณจะได้รับการยืนยัน!",
   "maybe_later": "ไว้ก่อน",
   "how_it_works": "มันทำงานอย่างไร",
   "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "เทคโนโลยีการจดจำใบหน้าของเราเปรียบเทียบใบหน้าของคุณในวิดีโอเซลฟี่กับภาพถ่ายในโปรไฟล์ของคุณ เราจะเก็บภาพหน้าจอสองภาพจากวิดีโอเซลฟี่ของคุณตราบเท่าที่บัญชีของคุณยังมีชีวิตอยู่เพื่อทดสอบและจัดการคุณสมบัติการยืนยันภาพถ่ายของคุณ นอกจากนี้เรายังจะรักษาผลลัพธ์ของกระบวนการ (เช่นภาพถ่ายที่ตรวจสอบหรือไม่)",
